--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
                                             <li role="presentation"><a href="#mapusa" aria-controls="mapusa" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Mapusa</a></li>
                                             <li role="presentation"><a href="#cancona" aria-controls="cancona" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Canacona</a></li>
                                             <li role="presentation"><a href="#porvorim" aria-controls="porvorim" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Porvorim</a></li>
-                                            <li role="presentation"><a href="#vasco" aria-controls="vasco" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Vasco</a></li>
                                             <li role="presentation"><a href="#sankhali" aria-controls="sankhali" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Sankhali</a></li>
                                             <li role="presentation"><a href="#morjim" aria-controls="morjim" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Morjim</a></li>
                                             <li role="presentation"><a href="#borim" aria-controls="borim" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Borim</a></li>
@@ -198,7 +197,8 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/stab1.png" alt="" />
+<!--                                                                <img src="assets/images/stab1.png" alt="" />-->
+                                                                <div class=mapdiv id="panjim-map"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -214,14 +214,13 @@
                                                                     <div class="separator"></div>
                                                                 </div>
                                                                 <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </p>
-
-                                                                <a href="" class="btn btn-primary">LEARN MORE</a>
                                                             </div>
                                                         </div>
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
+<!--                                                                <img src="assets/images/featureslid1.jpg" alt="" />-->
+                                                                <div class=mapdiv id="margao-map"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -243,7 +242,8 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/stab1.png" alt="" />
+<!--                                                                <img src="assets/images/stab1.png" alt="" />-->
+                                                                <div class=mapdiv id="mapusa-map"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -265,7 +265,8 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
+<!--                                                                <img src="assets/images/featureslid1.jpg" alt="" />-->
+                                                                <div class=mapdiv id="cancona-map"></div>
                                                             </div>
                                                         </div>
                                                         <!--                                                        <div id="pentagon"></div>-->
@@ -288,36 +289,14 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
+<!--                                                                <img src="assets/images/featureslid1.jpg" alt="" />-->
+                                                                <div class=mapdiv id="porvorim-map"></div>
                                                             </div>
                                                         </div>
                                                         <!--                                                        <div id="pentagon"></div>-->
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div role="tabpanel" class="tab-pane" id="vasco">
-                                                <div class="single_service_tab">
-                                                    <div class="row">
-                                                        <div class="col-sm-6">
-                                                            <div class="single_tab_content">
-                                                                <div class="head_title">
-                                                                    <h3>The Astronomical Observatory at Ravindra Bhavan, Baina, Vasco</h3>
-                                                                    <div class="separator"></div>
-                                                                </div>
-                                                                <p>EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</p>
-
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="col-sm-6">
-                                                            <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
-                                                            </div>
-                                                        </div>
-                                                        <!--                                                        <div id="pentagon"></div>-->
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            </div>  
                                             <div role="tabpanel" class="tab-pane" id="sankhali">
                                                 <div class="single_service_tab">
                                                     <div class="row">
@@ -334,7 +313,8 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
+<!--                                                                <img src="assets/images/featureslid1.jpg" alt="" />-->
+                                                                <div class=mapdiv id="sankhali-map"></div>
                                                             </div>
                                                         </div>
                                                         <!--                                                        <div id="pentagon"></div>-->
@@ -357,7 +337,7 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
+                                                                <div class=mapdiv id="morjim-map"></div>
                                                             </div>
                                                         </div>
                                                         <!--                                                        <div id="pentagon"></div>-->
@@ -380,7 +360,7 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
-                                                                <img src="assets/images/featureslid1.jpg" alt="" />
+                                                                <div class=mapdiv id="borim-map"></div>
                                                             </div>
                                                         </div>
                                                         <!--                                                        <div id="pentagon"></div>-->
@@ -394,6 +374,14 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            
+            <section id="calender" class="calender" >
+                    <div class="head_title">
+                        <h3>FEATURED WORK</h3>
+                        <div class="separator"></div>
+                    </div>
+                    <iframe src="https://calendar.google.com/calendar/embed?src=en04dndnrfmteuonean67vg3a4%40group.calendar.google.com&ctz=Asia%2FCalcutta" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </section>
 
             <section id="features" class="features">
@@ -1586,21 +1574,36 @@
         <script src="assets/js/jquery.masonry.min.js"></script>
 
 <!--        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
-        <script src="http://maps.google.com/maps/api/js"></script>
-        <script src="assets/js/gmaps.min.js"></script>
+        <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYiGKf8bUplYA55SGEmlevdOY-W_vG4lI&callback=showmap">
+    </script>
+
+<!--        <script src="assets/js/gmaps.min.js"></script>-->
 
 
         <script>
 
-                                            function showmap() {
-                                                var mapOptions = {
-                                                    zoom: 8,
-                                                    scrollwheel: false,
-                                                    center: new google.maps.LatLng(-34.397, 150.644),
-                                                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                                                };
-                                                var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
-                                            }
+        function showmap() {
+            /* panjim */
+            var panjimMapOptions = {
+                zoom: 16, center: new google.maps.LatLng(15.4969098,73.8248319), mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            var panjim_map = new google.maps.Map(document.getElementById('panjim-map'), panjimMapOptions);
+            var panjim_marker = new google.maps.Marker({position: {lat: 15.4969098, lng: 73.8248319}, map: panjim_map });
+
+             /* Mapusa */
+            var mapusaMapOptions = {
+                zoom: 16, center: new google.maps.LatLng(15.5952633,73.8050567), mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            var mapusa_map = new google.maps.Map(document.getElementById('mapusa-map'), mapusaMapOptions);
+            var marker = new google.maps.Marker({position: {lat: 15.5952633, lng: 73.8050567}, map: mapusa_map });
+            
+            setInterval(function(){
+                google.maps.event.trigger(mapusa_map, 'resize');
+                console.log('resized');
+            }, 2800)
+            google.maps.event.trigger(mapusa_map, 'resize');
+        }
         </script>
 
         <script src="assets/js/plugins.js"></script>
