Headers and logo added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                                 <span class="icon-bar"></span>
                                             </button>
                                             <a class="navbar-brand" href="#home">
-                                                <img src="assets/images/logo.png"/>
+                                                <img src="assets/images/logo-large.png"/>
                                             </a>
                                         </div>
 
@@ -378,7 +378,7 @@
             
             <section id="calender" class="calender" >
                     <div class="head_title">
-                        <h3>FEATURED WORK</h3>
+                        <h3>OUR ACTIVITIES THROUGHT GOA</h3>
                         <div class="separator"></div>
                     </div>
                     <iframe src="https://calendar.google.com/calendar/embed?src=en04dndnrfmteuonean67vg3a4%40group.calendar.google.com&ctz=Asia%2FCalcutta" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
@@ -390,7 +390,7 @@
                         <div class="col-sm-12">
                             <div class="main_features_area sections">
                                 <div class="head_title">
-                                    <h3>FEATURED WORK</h3>
+                                    <h3>Our Telescopes</h3>
                                     <div class="separator"></div>
                                 </div>
                                 <div class="row">
@@ -412,7 +412,7 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="single_features_text">
-                                                <h4>HAND WITH A WATCH</h4>
+                                                <h4>The Cassegrenian 14 telescope</h4>
                                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                                                     when an unknown printer took a galley of type and scrambled </p>
@@ -469,17 +469,17 @@
                                         <div class="col-sm-7 wow fadeInRight" data-wow-duration="700ms">
                                             <div class="single_about_right_content">
                                                 <div class="head_title">
-                                                    <h3>ABOUT LOGIC</h3>
+                                                    <h3>WHAT WE DO</h3>
                                                     <div class="separator"></div>
                                                 </div>
 
                                                 <div class="single_about">
                                                     <div class="single_ab_icon">
                                                         <div class="ab_border_right"></div>
-                                                        <i class="fa fa-coffee"></i>
+                                                        <i class="fa fa-eye"></i>
                                                     </div>
                                                     <div class="single_ab_text">
-                                                        <h3>RESPONSIVE DESIGN</h3>
+                                                        <h3>Daily Observation</h3>
                                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                                             Lorem Ipsum has been the industry's standard dummy text</p>
                                                     </div>
@@ -487,20 +487,30 @@
                                                 <div class="single_about">
                                                     <div class="single_ab_icon">
 
-                                                        <i class="fa fa-paint-brush"></i>
+                                                        <i class="fa fa-ship"></i>
                                                     </div>
                                                     <div class="single_ab_text">
-                                                        <h3>EASY TO CUSTOMIZE</h3>
+                                                        <h3>Beach Astronomy</h3>
                                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                                             Lorem Ipsum has been the industry's standard dummy text</p>
                                                     </div>
                                                 </div>
                                                 <div class="single_about">
                                                     <div class="single_ab_icon">
-                                                        <i class="fa fa-headphones"></i>
+                                                        <i class="fa fa-star"></i>
                                                     </div>
                                                     <div class="single_ab_text">
-                                                        <h3>LIFE TIME SUPPORT</h3>
+                                                        <h3>Star Party</h3>
+                                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                                            Lorem Ipsum has been the industry's standard dummy text</p>
+                                                    </div>
+                                                </div>
+                                                <div class="single_about">
+                                                    <div class="single_ab_icon">
+                                                        <i class="fa fa-film"></i>
+                                                    </div>
+                                                    <div class="single_ab_text">
+                                                        <h3>Science Film Festival</h3>
                                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                                             Lorem Ipsum has been the industry's standard dummy text</p>
                                                     </div>
