Removed extra sections

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                                 <span class="icon-bar"></span>
                                             </button>
                                             <a class="navbar-brand" href="#home">
-                                                <img src="assets/images/logo-large.png"/>
+                                                <img src="assets/images/AFALogo.png"/>
                                             </a>
                                         </div>
 
@@ -69,25 +69,10 @@
                                             <ul class="nav navbar-nav navbar-right">
                                                 <li><a href="#home">HOME</a></li>
                                                 <li><a href="#service">CENTERS</a></li>
-                                                <li><a href="#team">TEAMS</a></li>
-                                                <li><a href="#portfolio">WORKS</a></li>
-                                                <li><a href="#testimonial">Testimonial</a></li>
+                                                <li><a href="#calender">CALENDER</a></li>
+                                                <li><a href="#about">ACTIVITIES</a></li>
+                                                <li><a href="#othersservice">CLUBS</a></li>
                                                 <li><a href="#contact">CONTACT</a></li>
-
-
-                                                <li>
-                                                    <a href="#"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                                        <span class="glyphicon glyphicon-search"></span></a>
-                                                    <ul class="dropdown-menu">
-                                                        <li>
-                                                            <form class="navbar-form" role="search">
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" placeholder="Search">
-                                                                </div>
-                                                            </form>
-                                                        </li>
-                                                    </ul>
-                                                </li>
                                             </ul>
 
 
@@ -435,6 +420,7 @@
             </section>
 
 
+<!--
             <section id="video" class="video text-center wow fadeIn"  data-wow-duration="2s" data-wow-dealy="1.5s">
                 <div class="video_overlay">
                     <div class="container">
@@ -451,6 +437,7 @@
                     </div>
                 </div>
             </section>
+-->
 
 
 
@@ -612,25 +599,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="about_skill">
-                                                    <div class="skillbar" data-percent="79%">
-                                                        <div class="skillbar-title"><h3 class="blue">PHOTOSHOP</h3><span class="sm-text">79%</span></div>
-                                                        <div class="skillbar-bar blue"></div>
-                                                    </div>
-
-                                                    <div class="skillbar" data-percent="90%">
-                                                        <div class="skillbar-title"><h3 class="blue">HTML/CSS</h3><span class="sm-text">90%</span></div>
-                                                        <div class="skillbar-bar blue"></div>
-                                                    </div>
-
-                                                    <div class="skillbar" data-percent="69%">
-                                                        <div class="skillbar-title"><h3 class="blue">JAVASCRIPT</h3><span class="sm-text">69%</span></div>
-                                                        <div class="skillbar-bar blue"></div>
-                                                    </div>
-
-                                                    <div class="skillbar" data-percent="92%">
-                                                        <div class="skillbar-title"><h3 class="blue">WORDPRESS</h3><span class="sm-text">92%</span></div>
-                                                        <div class="skillbar-bar blue"></div>
-                                                    </div>
+                                                    <img src="assets/images/featureslid1.jpg">
                                                 </div>
                                             </div>
                                         </div>
@@ -644,64 +613,6 @@
                 </div>
             </section>
 
-
-            <section id="counter" class="counter">
-                <div class="video_overlay">
-                    <div class="container">
-                        <div class="row">  
-                            <div class="col-sm-12">               
-                                <div class="main_counter_area text-center">
-
-                                    <div class="row">
-                                        <div class="single_counter border_right">
-                                            <div class="col-sm-3 col-xs-12">
-                                                <div class="single_counter_item">
-                                                    <h2 class="statistic-counter">561</h2>
-                                                    <i class="icon icon-thumbs-up"></i>
-                                                    <p class="margin-top-20">CREATIVE DESIGN</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="single_counter">
-                                            <div class="col-sm-3 col-xs-12">
-                                                <div class="single_counter_item">
-                                                    <h2 class="statistic-counter">25</h2>
-                                                    <i class="icon icon-business-3"></i>
-                                                    <p class="margin-top-20">AWARDS WON</p>  
-                                                </div>
-
-                                            </div>
-                                        </div> 
-
-                                        <div class="single_counter">
-                                            <div class="col-sm-3 col-xs-12">
-                                                <div class="single_counter_item">
-                                                    <h2 class="statistic-counter">236</h2>
-                                                    <i class="icon icon-people-32"></i>
-                                                    <p class="margin-top-20">HAPPY CLIENTS</p>  
-                                                </div>
-
-                                            </div>
-                                        </div>
-
-                                        <div class="single_counter">
-                                            <div class="col-sm-3 col-xs-12">
-                                                <div class="single_counter_item">
-                                                    <h2 class="statistic-counter">365</h2>
-                                                    <i class="icon icon-cup"></i>
-                                                    <p class="margin-top-20">CUP OF COFFEE</p> 
-                                                </div>
-
-                                            </div>
-                                        </div> 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>  <!-- End of counter section -->
 
 
             <section id="othersservice" class="othersservice">
@@ -794,96 +705,6 @@
             </section>            
 
 
-
-
-            <section id="team" class="team">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="main_team sections">
-                                <div class="row">
-                                    <div class="head_title">
-                                        <h3>OTHER SERVICES</h3>
-                                        <div class="separator"></div>
-                                    </div>
-                                    <div class="col-sm-3 col-xs-12">
-                                        <div class="single_team_content">
-                                            <div class="single_team_img">
-                                                <img src="assets/images/team1.jpg" alt="" />
-                                            </div>
-                                            <div class="single_team_text_overlay">
-                                                <h4>SEMF UCUK</h4>
-                                                <p>FOUNDER</p>
-                                                <div class="team_overlay_socail">
-                                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                                    <a href=""><i class="fa fa-google-plus"></i></a>
-                                                    <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-sm-3 col-xs-12">
-                                        <div class="single_team_content">
-                                            <div class="single_team_img">
-                                                <img src="assets/images/team2.jpg" alt="" />
-                                            </div>
-                                            <div class="single_team_text_overlay">
-                                                <h4>DIK ADALIN</h4>
-                                                <p>ENGINEERING</p>
-                                                <div class="team_overlay_socail">
-                                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                                    <a href=""><i class="fa fa-google-plus"></i></a>
-                                                    <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-sm-3 col-xs-12">
-                                        <div class="single_team_content">
-                                            <div class="single_team_img">
-                                                <img src="assets/images/team3.jpg" alt="" />
-                                            </div>
-                                            <div class="single_team_text_overlay">
-                                                <h4>JENG KOL</h4>
-                                                <p>DESIGNER</p>
-                                                <div class="team_overlay_socail">
-                                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                                    <a href=""><i class="fa fa-google-plus"></i></a>
-                                                    <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-sm-3 col-xs-12">
-                                        <div class="single_team_content">
-                                            <div class="single_team_img">
-                                                <img src="assets/images/team4.jpg" alt="" />
-                                            </div>
-                                            <div class="single_team_text_overlay">
-                                                <h4>PET ROMAK</h4>
-                                                <p>MARKETING</p>
-                                                <div class="team_overlay_socail">
-                                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                                    <a href=""><i class="fa fa-google-plus"></i></a>
-                                                    <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> <!-- End of col-sm-4 -->
-                                </div>
-
-                            </div><!-- End of main team contant -->
-                        </div>
-                    </div><!-- End of row -->
-                </div>
-            </section>
 
 
             <section id="choose" class="choose">
@@ -1275,34 +1096,6 @@
             </section>
 
 
-            <section id="clogo" class="clogo">
-                <div class="container">
-                    <div class="row">
-                        <div class="main_clogo sections text-center">
-                            <div class="col-sm-2 col-xs-6"> 
-                                <a href=""><img src="assets/images/clogo1.png" alt="" /></a>
-                            </div>
-                            <div class="col-sm-2 col-xs-6"> 
-                                <a href=""><img src="assets/images/clogo2.png" alt="" /></a>
-                            </div>
-                            <div class="col-sm-2 col-xs-6"> 
-                                <a href=""><img src="assets/images/clogo3.png" alt="" /></a>
-                            </div>
-                            <div class="col-sm-2 col-xs-6">
-                                <a href=""><img src="assets/images/clogo4.png" alt="" /></a>
-                            </div>
-                            <div class="col-sm-2 col-xs-6"> 
-                                <a href=""><img src="assets/images/clogo5.png" alt="" /></a>
-                            </div>
-                            <div class="col-sm-2 col-xs-6">
-                                <a href=""><img src="assets/images/clogo9.png" alt="" /></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
 
 
             <section id="contact" class="contact">
@@ -1375,46 +1168,7 @@
                                             <div class="separator"></div>
                                         </div>
                                         <div class="single_contant_left">
-                                            <form action="#" id="formid">
-                                                <!--<div class="col-lg-8 col-md-8 col-sm-10 col-lg-offset-2 col-md-offset-2 col-sm-offset-1">-->
-
-                                                <div class="row">
-                                                    <div class="col-sm-6">
-                                                        <div class="form-group">
-                                                            <input type="text" class="form-control" name="name" placeholder="First Name" required="">
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        <div class="form-group">
-                                                            <input type="text" class="form-control" name="name" placeholder="Last Name" required="">
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-
-                                                <div class="row">
-                                                    <div class="col-sm-6">
-                                                        <div class="form-group">
-                                                            <input type="email" class="form-control" name="email" placeholder="Email" required="">
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        <div class="form-group">
-                                                            <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <textarea class="form-control" name="message" rows="8" placeholder="Message"></textarea>
-                                                </div>
-
-                                                <div class="">
-                                                    <input type="submit" value="Submit" class="btn btn-primary">
-                                                </div>
-                                                <!--</div>--> 
-                                            </form>
+                                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSchPFj3cxWtTVMF6lvIfIgUSJga8KHkYZ4ftcDVsVaf-1oN1Q/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                                         </div>
                                     </div>
 
