Changes in text

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                                                 <li><a href="#calender">CALENDER</a></li>
                                                 <li><a href="#about">ACTIVITIES</a></li>
                                                 <li><a href="#othersservice">CLUBS</a></li>
+                                                <li><a href="#portfolio">GALLERY</a></li>
                                                 <li><a href="#contact">CONTACT</a></li>
                                             </ul>
 
@@ -833,7 +834,7 @@
                         <div class="main_portfolio sections">
                             <div class="col-sm-4">
                                 <div class="head_title">
-                                    <h3>LATEST PROJECT</h3>
+                                    <h3>Gallery</h3>
                                     <div class="separator"></div>
                                 </div>
                             </div>
@@ -1120,7 +1121,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h3>VISIT US</h3>
-                                                                <p>20, 2 Elizabeth ST, Melbourne, Victoria 3000</p>
+                                                                <p>Public Astronomical Observatory, Terrace, Junta House, Panaji - Goa</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1131,7 +1132,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h3>MAIL US</h3>
-                                                                <p>support@yourmail.com</p>
+                                                                <p>afagoa@gmail.com</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1142,7 +1143,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h3>CALL US</h3>
-                                                                <p>+(100) 123 4567 890</p>
+                                                                <p>+(91) </p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1153,7 +1154,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h3>WORK HOUR</h3>
-                                                                <p>Mon - Sat: 08 Am - 17 Pm</p>
+                                                                <p>Everyday: 07:00 PM to 09:00 PM </p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1180,26 +1181,6 @@
 
 
 
-            <section id="maps" class="maps">
-                <div class="map-overlay">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="main_maps text-center">
-                                <div class="col-sm-12 no-padding">
-                                    <div class="map_canvas_icon">
-                                        <i class="fa fa-map-marker" onClick="showmap()"></i>
-                                        <h2 onClick="showmap()">FIND US ON GOOGLE MAP</h2>
-                                    </div>
-                                    <div id="map_canvas"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
             <section id="footer" class="footer_widget">
                 <div class="video_overlay">
                     <div class="container">
@@ -1210,11 +1191,8 @@
                                         <div class="col-sm-3 col-xs-12">
                                             <div class="single_widget wow fadeIn" data-wow-duration="800ms">
                                                 <div class="footer_logo">
-                                                    <img src="assets/images/logo.png" alt="" />
+                                                    <img src="assets/images/AFALogo.png" width="180px" alt="" />
                                                 </div>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                                                    nisi ut aliquip ex ea commodo consequat. </p>
 
                                             </div>
                                         </div>
@@ -1227,10 +1205,13 @@
                                                     <div class="separator"></div>
                                                 </div>
                                                 <ul>
-                                                    <li><a href="">Services</a></li>
-                                                    <li><a href="">About Us</a></li>
-                                                    <li><a href="">Our Team</a></li>
-                                                    <li><a href="">Portfolio</a></li>
+                                                    <li><a href="#home">HOME</a></li>
+                                                    <li><a href="#service">CENTERS</a></li>
+                                                    <li><a href="#calender">CALENDER</a></li>
+                                                    <li><a href="#about">ACTIVITIES</a></li>
+                                                    <li><a href="#othersservice">CLUBS</a></li>
+                                                    <li><a href="#portfolio">GALLERY</a></li>
+                                                    <li><a href="#contact">CONTACT</a></li>
                                                 </ul> 
                                             </div>
                                         </div>
@@ -1239,7 +1220,7 @@
                                             <div class="single_widget wow fadeIn" data-wow-duration="800ms">
 
                                                 <div class="footer_title">
-                                                    <h4>ACHIVES</h4>
+                                                    <h4>Via Lactea Archives</h4>
                                                     <div class="separator"></div>
                                                 </div>
                                                 <ul>
