--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                                             <li role="presentation"><a href="#sankhali" aria-controls="sankhali" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Sankhali</a></li>
                                             <li role="presentation"><a href="#morjim" aria-controls="morjim" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Morjim</a></li>
                                             <li role="presentation"><a href="#borim" aria-controls="borim" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Borim</a></li>
+                                            <li role="presentation"><a href="#vasco" aria-controls="vasco" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />Vasco</a></li>
                                         </ul>
 
                                         <!-- Tab panes -->
@@ -353,6 +354,29 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div role="tabpanel" class="tab-pane" id="vasco">
+                                                <div class="single_service_tab">
+                                                    <div class="row">
+                                                        <div class="col-sm-6">
+                                                            <div class="single_tab_content">
+                                                                <div class="head_title">
+                                                                    <h3>Ravindra bhavan, Vasco</h3>
+                                                                    <div class="separator"></div>
+                                                                </div>
+                                                                <p>HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH</p>
+
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-sm-6">
+                                                            <div class="single_tab_img">
+                                                                <div class=mapdiv id="vasco-map"></div>
+                                                            </div>
+                                                        </div>
+                                                        <!--                                                        <div id="pentagon"></div>-->
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -409,7 +433,6 @@
                                                     <li><span>Tags:</span> Hand, Watch, Black, Tree</li>
                                                 </ul>
 
-                                                <a href="" class="btn">LAUNCH NOW</a>
                                             </div>
                                         </div>
                                     </div>
@@ -623,7 +646,7 @@
                             <div class="main_othersservice_area sections">
                                 <div class="row">
                                     <div class="head_title">
-                                        <h3>OTHER SERVICES</h3>
+                                        <h3>OUR CLUBS</h3>
                                         <div class="separator"></div>
                                     </div>
 
@@ -631,7 +654,7 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4><span><i class="fa fa-clock-o"></i></span> CREATIVE DESIGN</h4>
+                                                    <h4><span><i class="fa fa-clock-o"></i></span> AFA OBSERVERS CLUB</h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -641,7 +664,7 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-picture-o"></i></span> WEB DEVELOPMENT</h4>
+                                                    <h4> <span><i class="fa fa-picture-o"></i></span> AFA PHOTOGRAPHY CLUB</h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -651,7 +674,7 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-television"></i></span> VIDEO EDITING</h4>
+                                                    <h4> <span><i class="fa fa-television"></i></span> AFA LITERARY CLUB</h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -663,7 +686,7 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-object-group"></i></span> MARKETING</h4>
+                                                    <h4> <span><i class="fa fa-object-group"></i></span>AFA ASTRO KIDS CLUB</h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -714,7 +737,7 @@
                         <div class="main_choose sections">
                             <div class="col-sm-6">
                                 <div class="head_title">
-                                    <h3>WHY CHOOSE US</h3>
+                                    <h3>OUR PUBLICATIONS</h3>
                                     <div class="separator"></div>
                                 </div>
                                 <div class="single_choose">
@@ -724,7 +747,7 @@
                                                 <div class="panel-heading" role="tab" id="headingOne">
                                                     <h4 class="panel-title">
                                                         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
-                                                            <i class="fa fa-picture-o"></i> GREAT DESIGN 
+                                                            <i class="fa fa-picture-o"></i> VIA LACTEA 
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -741,7 +764,7 @@
                                                 <div class="panel-heading" role="tab" id="headingTwo">
                                                     <h4 class="panel-title">
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                            <i class="fa fa-map-signs"></i> RESPONSIVE DESIGN 
+                                                            <i class="fa fa-map-signs"></i> NEWSPAPER 
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -758,7 +781,7 @@
                                                 <div class="panel-heading" role="tab" id="headingThree">
                                                     <h4 class="panel-title">
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                            <i class="fa fa-bullseye"></i> RATINA READY 
+                                                            <i class="fa fa-bullseye"></i> ASTRONOMY BOOKLET 
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -776,29 +799,11 @@
                                                 <div class="panel-heading" role="tab" id="headingThree">
                                                     <h4 class="panel-title">
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="false" aria-controls="collapseThree">
-                                                            <i class="fa fa-umbrella"></i>FREE GOOGLE FONT 
+                                                            <i class="fa fa-umbrella"></i>ANTARIKSH 
                                                         </a>
                                                     </h4>
                                                 </div>
                                                 <div id="collapsefour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false">
-                                                    <div class="panel-body">
-                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-                                                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                                                        culpa qui officia deserunt mollit anim id est laborum.
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading" role="tab" id="headingThree">
-                                                    <h4 class="panel-title">
-                                                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="false" aria-controls="collapseThree">
-                                                            <i class="fa fa-subway"></i>1170 PX GRID BASE 
-                                                        </a>
-                                                    </h4>
-                                                </div>
-                                                <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingfive" aria-expanded="false">
                                                     <div class="panel-body">
                                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
                                                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
@@ -841,9 +846,9 @@
                             <div class="col-sm-6 col-sm-offset-2">
                                 <div id="filters" class="toolbar mb2 mt2">
                                     <button class="btn-md fil-cat filter active" href=""  data-filter="all">SHOW ALL</button>
-                                    <button class="btn-md fil-cat filter" data-rel="web" data-filter=".web">PHOTOGRAPHY</button>
-                                    <button class="btn-md fil-cat filter" data-rel="flyers" data-filter=".flyers">BRANDING</button> 
-                                    <button class="btn-md fil-cat filter" data-rel="bcards" data-filter=".bcards">GRAPHIC DESIGN</button>
+                                    <button class="btn-md fil-cat filter" data-rel="web" data-filter=".web">ASTRO PHOTOGRAPHY</button>
+                                    <button class="btn-md fil-cat filter" data-rel="flyers" data-filter=".flyers">PROGRAMS</button> 
+                                    <button class="btn-md fil-cat filter" data-rel="bcards" data-filter=".bcards">EVENTS</button>
                                     <div class="separator2"></div>
                                 </div> 
 
