--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                                                 <li><a href="#about">ACTIVITIES</a></li>
                                                 <li><a href="#othersservice">CLUBS</a></li>
                                                 <li><a href="#portfolio">GALLERY</a></li>
+                                                <li><a href="#testimonial">TESTIMONIALS</a></li>
                                                 <li><a href="#contact">CONTACT</a></li>
                                             </ul>
 
