--- a/index.html
+++ b/index.html
@@ -411,13 +411,16 @@
 
                                             <div class="single_features_slide">
                                                 <div class="single_ft_s_item">
-                                                    <img src="assets/images/featureslid1.jpg" alt="" />
+                                                    <img src="assets/images/telescopes/astrograph.jpg" alt="" />
                                                 </div>
                                                 <div class="single_ft_s_item">
-                                                    <img src="assets/images/featureslid1.jpg" alt="" />
+                                                    <img src="assets/images/telescopes/c14.jpg" alt="" />
                                                 </div>
                                                 <div class="single_ft_s_item">
-                                                    <img src="assets/images/featureslid1.jpg" alt="" />
+                                                    <img src="assets/images/telescopes/c6.jpg" alt="" />
+                                                </div>
+                                                <div class="single_ft_s_item">
+                                                    <img src="assets/images/telescopes/8inch.jpg" alt="" />
                                                 </div>
                                             </div>
                                         </div>
